[tool.poetry]
name = "morsecode"
version = "0.1.0"
description = ""
authors = ["Patriziocriscuolo <patcriscuolo123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyvisa-py = "^0.7.2"
pyside6 = "^6.8.1"
pyqtgraph = "^0.13.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
text = "morsecode.LED:text"